.provarCaches/00D410000011HE0EAM/objects/rstk__objpagesetup__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_objpagesetup</customHelpPage>
    <description>objpagesetup__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__objname__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__neweditmodeoption__c</fullName>
        <inlineHelpText>This is the page layout that will display when in New (Add) and/or Edit mode.</inlineHelpText>
        <label>New/Edit Mode Layout</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default Layout</fullName>
                    <default>true</default>
                    <label>Default Layout</label>
                </value>
                <value>
                    <fullName>Custom VF Layout</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__neweditmodevfpage__c</fullName>
        <inlineHelpText>If ‘Custom VF Layout’ is selected, you need to define the custom page layout name here.</inlineHelpText>
        <label>New/Edit Mode VF Page</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__objname__c</fullName>
        <inlineHelpText>Enter object name of the object for which you wish to override the page layout.  Example = ICITEM</inlineHelpText>
        <label>Object Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__viewmodeoption__c</fullName>
        <inlineHelpText>The page layout that will display when in view mode.</inlineHelpText>
        <label>View Mode Layout</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default Layout</fullName>
                    <default>true</default>
                    <label>Default Layout</label>
                </value>
                <value>
                    <fullName>Standard SF Layout</fullName>
                </value>
                <value>
                    <fullName>Custom VF Layout</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__viewmodevfpage__c</fullName>
        <inlineHelpText>If ‘Custom VF Layout’ is selected, you need to define the custom page layout name here.</inlineHelpText>
        <label>View Mode VF Page</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Object Page Setup</label>
    <listViews>
        <fullName>rstk__RS_Object_Page_Setups</fullName>
        <columns>NAME</columns>
        <columns>rstk__objname__c</columns>
        <columns>rstk__viewmodeoption__c</columns>
        <columns>rstk__viewmodevfpage__c</columns>
        <columns>rstk__neweditmodeoption__c</columns>
        <columns>rstk__neweditmodevfpage__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Object Page Setups</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__Rstk</fullName>
        <columns>NAME</columns>
        <columns>rstk__objname__c</columns>
        <columns>rstk__viewmodeoption__c</columns>
        <columns>rstk__viewmodevfpage__c</columns>
        <columns>rstk__neweditmodeoption__c</columns>
        <columns>rstk__neweditmodevfpage__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Rstk</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Page Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Object Page Setups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstk__neweditmode_validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( rstk__neweditmodeoption__c , &apos;Custom VF Layout&apos;) &amp;&amp; ISBLANK( rstk__neweditmodevfpage__c )</errorConditionFormula>
        <errorDisplayField>rstk__neweditmodevfpage__c</errorDisplayField>
        <errorMessage>New/Edit Mode VF Page must be specified when New/Edit Mode is Custom VF Layout</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__neweditmode_validation2</fullName>
        <active>true</active>
        <errorConditionFormula>!ISPICKVAL( rstk__neweditmodeoption__c , &apos;Custom VF Layout&apos;) &amp;&amp; !ISBLANK( rstk__neweditmodevfpage__c )</errorConditionFormula>
        <errorDisplayField>rstk__neweditmodevfpage__c</errorDisplayField>
        <errorMessage>New/Edit Mode VF Page must only be specified when New/Edit Mode is Custom VF Layout</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__objname_validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( rstk__objname__c )</errorConditionFormula>
        <errorMessage>Object Name is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__viewmode_validation</fullName>
        <active>true</active>
        <errorConditionFormula>!ISPICKVAL( rstk__viewmodeoption__c , &apos;Custom VF Layout&apos;) &amp;&amp; !ISBLANK( rstk__viewmodevfpage__c )</errorConditionFormula>
        <errorMessage>View Mode Page can only be specified when View Mode is Custom VF Layout</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__viewmode_validation2</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( rstk__viewmodeoption__c , &apos;Custom VF Layout&apos;) &amp;&amp; ISBLANK( rstk__viewmodevfpage__c )</errorConditionFormula>
        <errorMessage>View Mode Page must be specified when View Mode is Custom VF Layout</errorMessage>
    </validationRules>
</CustomObject>